@@ -1,6 +1,6 @@
 package Pod::Readme::Test;
 
-use Exporter::Lite;
+use Exporter qw/ import /;
 use IO::String;
 
 require Test::More;
@@ -9,13 +9,14 @@ our $out;
 our $io = IO::String->new($out);
 our $prf;
 
-our @EXPORT = qw/ $prf $out $io filter_lines reset_out /;
+our @EXPORT    = qw/ $prf $out $io filter_lines reset_out /;
+our @EXPORT_OK = @EXPORT;
 
 sub filter_lines {
     my @lines = @_;
     foreach my $line (@lines) {
         Test::More::note $line if $line =~ /^=(?:\w+)/;
-        $prf->filter_line($line . "\n");
+        $prf->filter_line( $line . "\n" );
     }
 }
 
